Updated  index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <ul class="theme-list">
                 <li class="fg-dark"><b>From:</b> Pune , India</li>
                 <li class="fg-dark"><b>Lives In:</b> Pune , India</li>
-                <li class="fg-dark"><b>Age:</b> 22</li>
+                <li class="fg-dark"><b>Age:</b> 23</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
               </ul>
               <a class="btn btn-theme btn-rounded" href="#" target="_blank">Download CV</a>
@@ -216,21 +216,21 @@
             <h2 class="fg-dark">Experience / Projects</h2>
             <ul class="timeline mt-4 pr-md-5">
               <li>
-                <div class="title">2023 </div>
+                <div class="title">2024 </div>
                 <div class="details">
                    <h5>Associate QA Automation Engineer (Present)</h5>
                   <small class="fg-theme">Ivalua </small>
                   <p>
-                   Automating the test cases , Analyzing the results  , Taging the Result , Fixing the test cases , Raising the bug .
+                   Working on API testing / EAI testing , Also dealing with e-signatures(Docusign and Adobe sign) eg configuring env.
                   </p>
                   <p>
-                    Automating the Test cases According to the Scenarios.
+                    Automating the Test scenarios and maintaing it on the desired versions .
                   </p>
                   <p>
-                   Maintaing the ESourcing & Platform & SRM Branch and Tagging the Faliure
+                   Maintaing the ESourcing & Platform & Integration Modules
                   </p>
                   <p>
-                    Done L1 Certification
+                    Done L1,L2 Config Certification + Release Manager Badge
                   </p>
                 </div>
               </li>
